feat(ui): saving updates